# Phase1---Little-Lost-Robot

./: Untitled1.bak  Untitled1.nxc  Untitled1.sym  blue.rso  moveForward.bak  moveForward.nxc  moveForward.sym  playSound.nxc  scan.bak  scan.nxc  scan.sym  test.nxc  turnAtWall.bak  turnAtWall.nxc  turnAtWall.sym  turnAtWall2.bak  turnAtWall2.nxc  turnAtWall2.sym  victory.nxc
Distro/: mapdata.txt  pfilter prob.bak  pfilter prob.nxc  pfilter prob.sym
Lab 3/: Image_Rescale  Image_Rescale.cpp  REPORT.TXT  callgrind.out.12074  compile.sh  test.ppm  test2.ppm
Original Test Files/: Untitled1.nxc  moveForward.bak  playSound.bak  playSound.sym  refactor.nxc  test.sym  turnAtWall  turnAtWall.bak  turnAtWall.sym  turnAtWall2.bak
Phase 2/: Lander.cpp  Lander_Control  REPORT.TXT  easy.ppm  hard.ppm  lander.ppm  lander__.ppm  out.txt  toasted_0006.ppm  toasted_0009.ppm  toasted_0010.ppm  toasted_0012.ppm  toasted_0013.ppm  toasted_0018.ppm  toasted_0020.ppm  toasted_0022.ppm  toasted_0024.ppm  toasted_0025.ppm  toasted_0030.ppm  toasted_0031.ppm  toasted_0032.ppm  toasted_0033.ppm  toasted_0035.ppm  toasted_0036.ppm  toasted_0037.ppm  toasted_0039.ppm  toasted_0042.ppm  toasted_0044.ppm  toasted_0048.ppm  varis.ppm
Phase 3/: ChaseBallFSM.xml  Makefile  Makefile.am  config.status  (+4 more)
Phase 3/src/: Makefile.am  Makefile.in  roboAI.c  roboAI.h  roboSoccer.c
Phase 3/src/.deps/: avilib.Po  color.Po  gui.Po  imageCapture.Po  imageProc.Po  roboAI.Po  roboSoccer.Po  robotControl.Po  svdDynamic.Po  utils.Po  v4l2uvc.Po
Phase 3/src/imagecapture/: imageCapture.c  v4l2uvc.c  v4l2uvc.h
(+134 files in other folders)
