bin_PROGRAMS = roboSoccer
roboSoccer_SOURCES = roboSoccer.c imagecapture/imageCapture.c imagecapture/avilib.c imagecapture/color.c imagecapture/gui.c imagecapture/imageProc.c imagecapture/svdDynamic.c imagecapture/utils.c imagecapture/v4l2uvc.c \
			API/robotControl.c roboAI.c
roboSoccer_LDADD = ../Bluetooth/nxtlibc-0.1/libnxtlibc.a
